# pyhole-bot

./: .editorconfig  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
blocklist/: blocklist.txt
src/pyholebot/: __init__.py  core.py  get_list.py
tests/: context.py  mock_uniq_test.txt  test_get_list.py
