[metadata]
name = pyhole-bot-thiago-scherrer
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thiago-scherrer/pyhole-bot
project_urls =
    Bug Tracker = https://github.com/thiago-scherrer/pyhole-bot/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
